@@ -1,4 +1,4 @@
-* Fri Jun 9 2006 Brendan O'Dea <bod@optus.net> 2.2.0
+* Fri Jun 23 2006 Brendan O'Dea <bod@optus.net> 2.2.0
 - Only poll clifd if successfully bound.
 - Add "Practical VPNs" document from Liran Tal as Docs/vpn .
 - Add Multilink support from Khaled Al Hamwi.
@@ -6,6 +6,8 @@
 - Convert manual.html to Docbook.
 - Kludge around problem with Netgear DM602 authentication.
 - Add session/idle timeouts (Graham Maltby).
+- Use result code AVP to set Acct-Terminate-Cause is disconnect cause
+  AVP is not present.
 
 * Tue Apr 18 2006 Brendan O'Dea <bod@optus.net> 2.1.18
 - Don't shutdown on TerminateReq, wait for CDN.
